@@ -5284,6 +5284,12 @@ extern "C" {
 #define TOUCHEVENTMASKF_EXTRAINFO       0x0002
 #define TOUCHEVENTMASKF_CONTACTAREA     0x0004
 
+#define MAPVK_VK_TO_VSC    0
+#define MAPVK_VSC_TO_VK    1
+#define MAPVK_VK_TO_CHAR   2
+#define MAPVK_VSC_TO_VK_EX 3
+#define MAPVK_VK_TO_VSC_EX 4
+
   typedef struct _TOUCHINPUT {
     LONG x;
     LONG y;
